# arvernus

./: README.md  pyproject.toml
frontend/dashboard/: package-lock.json  package.json
frontend/dashboard/src/: App.js  BarChartComponent.js  Dashboard.js  LineChartComponent.js  MyLayout.js  MyMenu.js  Optimization.js  PieChartComponent.js  Vehicles.js  setupProxy.js
src/api/runner/api/runner/: post_launch_scenario.py
src/api/runner/api/scenarios/: get_get_scenario.py  post_initialize_scenario.py  put_update_scenario.py
src/api/runner/models/: __init__.py  customer.py  scenario.py  update_scenario.py  vehicle.py  vehicle_update.py
src/api/scenarios/api/customers/: get_all_customers_by_scenario_id.py  get_customer_by_id.py
src/api/scenarios/api/scenario/: create_scenario.py  delete_scenario_by_id.py  get_all_scenarios.py  get_scenario_by_id.py  get_scenario_metadata.py
src/api/scenarios/api/vehicles/: get_all_vehicles_by_scenario_id.py  get_vehicle_by_id.py
src/api/scenarios/models/: __init__.py  customer_dto.py  response_message.py  scenario_dto.py  scenario_metadata_dto.py  standard_magenta_vehicle_dto.py  vehicle_data_dto.py
src/arvernus/: __init__.py  matching.py  schedule.py  test.py
src/arvernus/strategy/: base_strategy.py
src/backend/: __init__.py
tests/: test_runner.py  test_scenarios.py
