[project]
name = "arvernus"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "Simon Hundsdorfer", email = "simon.hundsdorfer@tum.de" },
]
dependencies = [
  "httpx>=0.27.2",
  "attrs>=24.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arvernus", "src/api"]
