[project]
name = "arvernus"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "Simon Hundsdorfer", email = "simon.hundsdorfer@tum.de" },
]
dependencies = [
  "httpx>=0.27.2",
  "attrs>=24.2.0",
  "flask>=3.1.0",
  "geopy>=2.4.1",
  "vrp>=0.0.3",
  "networkx>=3.4.2",
  "vrpy>=0.5.1",
  "cspy>=1.0.3",
  "matching>=1.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
  "pytest>=8.3.3",
  "debugpy>=1.8.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arvernus", "src/api", "src/backend"]
